# bat-native-rapidjson

./: BUILD.gn  readme.md
doc/: features.md  internals.md  internals.zh-cn.md  schema.md  schema.zh-cn.md
test/perftest/: schematest.cpp
test/unittest/: readertest.cpp
