# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

if (is_android) {
  import("//build/config/android/rules.gni")
}

config("external_config") {
  include_dirs = [ "include" ]
}

source_set("bat-native-rapidjson") {
  public_configs = [ ":external_config" ]
}
